--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "silver-price-dashboard"
+name = "silver-price-calculator"
 version = "1.0.0"
 description = "Silver Price Calculator & Silver Sales Dashboard"
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "altair>=5.5.0",
-    "geopandas>=1.0.1",
-    "pandas>=2.3.1",
-    "streamlit>=1.48.1",
-]
+requires-python = ">=3.9"
