--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-altair>=5.5.0
-geopandas>=1.0.1
-pandas>=2.3.1
-streamlit>=1.48.1
+altair>=5.0.0
+pandas>=1.5.0
+streamlit>=1.20.0
+geopandas>=0.12.0
+shapely>=2.0.0
+pyogrio>=0.7.0
+
